# solar-consumer

./:  .gitignore   .all-contributorsrc  .bumpversion.cfg  .env  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_be_generation_local.py
.github/workflows/: branch-ci.yml  merged-ci.yml  pytest.yaml  release-docker.yml  tagged_ci.yml
neso_solar_consumer/: __init__.py  app.py  fetch_data.py  fetch_nl_data.py  format_forecast.py  save_forecast.py
neso_solar_consumer/data/: fetch_gb_data.py  fetch_nl_data.py
neso_solar_consumer/script/: fetch_gp_data.py  fetch_nl_data.py
scripts/: de_export.py  get_elia_belgium_pv_generation.py  get_pvlive_uk_pv_generation.py
solar_consumer/: __init__.py  app.py  constants.py  de_export.py  fetch_data.py  format_forecast.py  save_forecast.py  test_fetch_de_data.py
solar_consumer/data/: be_locations.csv  fetch_be_data.py  fetch_de_data.py  fetch_gb_data.py  fetch_in_data.py  fetch_ind_rajasthan_data.py  fetch_nl_data.py  gsp_merge_weights.yaml  locations.csv  nighttime.py  nl_locations.csv  uk_gsp_locations.csv  uk_gsp_locations.py  uk_gsp_locations_20250109.csv
solar_consumer/save/: __init__.py  save_csv.py  save_data_platform.py  save_database.py  save_site_database.py
tests/: conftest.py  test_fetch_data.py  test_fetch_de_data.py  test_fetch_in_data.py  test_format_forecast.py  test_real_forecasts.py  test_save_forecast.py
tests/data/: test_nighttime.py
tests/integration/: conftest.py  test_fetch_be_forecast.py  test_fetch_ind_rajasthan_data.py  test_fetch_nl_data.py  test_nl_capacity_integration.py  test_real_forecasts.py  test_save_be_to_data_platform.py  test_save_ind_rajasthan_to_data_platform.py  test_save_nl_and_be_to_data_platform.py  test_save_nl_to_data_platform.py  test_save_to_data_platform.py
tests/unit/: test_fetch_data.py  test_fetch_data_nl.py  test_fetch_gb_data.py  test_fetch_ind_rajasthan_data.py  test_format_forecast.py  test_mixed_country_isolation.py  test_nighttime.py  test_nl_capacity_validation.py  test_save_be_generation_unit.py  test_save_forecast.py  test_save_generation_ruvnl.py  test_unit_fetch_be_forecast.py  test_unit_fetch_ind_rajasthan_data.py
tests/unit/mock/responses/: elia_be_generation_mixed_regions.json  elia_be_invalid.json  elia_be_mixed_regions.json  (+4 more)
