[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solar_consumer"
dynamic = ["version"]
dependencies = [
    "pandas",
    "sqlalchemy",
    "nowcasting_datamodel==1.5.56",
    "pvsite-datamodel@git+https://github.com/openclimatefix/pv-site-datamodel.git@site-location",
    "testcontainers",
    "pyproj==3.6.1",
    "tqdm",
    "loguru==0.7.3",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
    "pandas"
]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"